Updated Modules 1 and 3.5. Removed outputs from Module 2.

--- a/Module_1_Var_Dt_etc.ipynb
+++ b/Module_1_Var_Dt_etc.ipynb
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello world!\")"
    ]
@@ -46,9 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is how I will print \"Double quotes\". Let us add another line while we are at it:\n",
+      "Here\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"This is how I will print \\\"Double quotes\\\". Let us add another line while we are at it:\\nHere\")"
    ]
@@ -223,9 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "-7 #Negative number"
@@ -473,9 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a_number = 2 # integer\n",
@@ -1043,9 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Write out the code here"
@@ -1069,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
