--- a/Module_3.5_File_handling_Strings_etc.ipynb
+++ b/Module_3.5_File_handling_Strings_etc.ipynb
@@ -12,6 +12,28 @@
     " - Importing packages\n",
     " - Basic plotting\n",
     " \n",
+    "### Strings\n",
+    "\n",
+    "Refreshing our memories, string is just a set of characters enclosed by quotation marks. We can manipulate strings in many ways with python that is powerful and very useful in a variety of contexts. \n",
+    "\n",
+    "Each character in a string has an index. Consider the string \"A Test String\":<br>\n",
+    "Character  Index<br>\n",
+    "\"A\"         0<br>\n",
+    "\" \"         1<br>\n",
+    "\"T\"         2<br>\n",
+    "\"E\"         3<br>\n",
+    "\"S\"         4<br>\n",
+    "\"T\"         5<br>\n",
+    "\" \"         6<br>\n",
+    "\"S\"         7<br>\n",
+    "\"t\"         8<br>\n",
+    "\"r\"         9<br>\n",
+    "\"i\"         10<br>\n",
+    "\"n\"         11<br>\n",
+    "\"g\"         12<br>\n",
+    "\n",
+    "Knowing how to manipulate strings gives us powerful means to work with sequences, text files, etc., essential for computational biology. We will begin by learning some basic string manipulation.\n",
+    " \n",
     "### Let us do some string manipulation!\n",
     "\n",
     " - Count the occurance of a substring\n",
@@ -19,11 +41,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us take my favorite protein sequence and write code to find percentage of positively charged residues. First let us initialize the sequence:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histone_h3 = \"MARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lysine (K), Arginine (R), and Histodine (H) are the positive residues. We use `count()` function to count occurences of these residues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = histone_h3.count('K') + histone_h3.count('R') + histone_h3.count('H')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To compare extent of positive residues in H3 with another protein, we have to **normalize** to total protein length. We use `len()` function to find length of strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -34,20 +93,21 @@
     }
    ],
    "source": [
-    "histone_h3 = \"MARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\"\n",
-    "count = histone_h3.count('K') + histone_h3.count('R') + histone_h3.count('H')\n",
-    "\n",
     "percent_positive = count*100/len(histone_h3)\n",
-    "\n",
     "print(\"Histone H3 percent positive:\", percent_positive)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is Histone H3 special? Let us do the same analysis on a \"housekeeping\" protein, GAPDH:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -70,67 +130,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Starts with/ Ends with\n",
-    "str.startswith(prefix[, start[, end]])<br>\n",
-    "str.endsswith(prefix[, start[, end]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Seq name:\thistone_H3\n",
-      "Seq:\tMARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\n"
-     ]
-    }
-   ],
-   "source": [
-    "fasta_file=\">histone_H3\\nMARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\"\n",
-    "fasta_lines = fasta_file.split('\\n') #Two lines in the fasta file, let us separate the lines\n",
-    "for i in fasta_lines: #for each line\n",
-    "    if i.startswith('>'): #Does the line start with the \">\" symbol?\n",
-    "        #seq_name = i.lstrip('>') #Let us remove the \">\" symbol\n",
-    "        seq_name = i.replace(\">\",'')\n",
-    "    else:\n",
-    "        seq = i\n",
-    "print(\"Seq name:\\t\"+seq_name+\"\\nSeq:\\t\"+seq)"
+    "What other questions could we ask with `count()` and `len()` commands in biological sequences?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find\n",
-    "str.find ( prefix [ , start [ , end ] ] )"
+    "### String parsing\n",
+    "\n",
+    "String parsing can be a powerful way to process **large** or **many** files in batch mode to extract information relevant to us, avoiding manual curation. As a simple example, we can start with a *fasta* entry, which has two lines:\n",
+    "\n",
+    "- First line is the sequence name, which starts with \">\"\n",
+    "- Second line is the sequence itself\n",
+    "\n",
+    "How do I extract information from a fasta entry? (We will directly work on files later, here we go through a simpler example by initializing the fasta entry as a string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">histone_H3\n",
+      "MARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\n"
+     ]
+    }
+   ],
+   "source": [
+    "fasta_file=\">histone_H3\\nMARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\"\n",
+    "print(fasta_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us first split the two lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fasta_lines = fasta_file.split('\\n') #Two lines in the fasta file, let us separate the lines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quick refresher: What kind of data type is `fasta_lines`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50"
+       "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seq.find('E',47)"
+    "type(fasta_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There were two lines, each of which are an element in the list `fasta_lines`. <br>Now, which of the elements is the header and which of them is the sequence? \n",
+    "\n",
+    "Pseudocode:\n",
+    "- The header in a fasta starts with `>`. We can check for that with `startswith()`. \n",
+    "- We will go through each element of the list `fasta_lines` and check for the `>` sign. \n",
+    "- If the `>` sign is absent, that element is the sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seq name:\t>histone_H3\n",
+      "Seq:\t\tMARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in fasta_lines: #for each line\n",
+    "    if i.startswith('>'): #Does the line start with the \">\" symbol?\n",
+    "        seq_name = i\n",
+    "    else:\n",
+    "        seq = i\n",
+    "print(\"Seq name:\\t\"+seq_name+\"\\nSeq:\\t\\t\"+seq)"
    ]
   },
   {
@@ -138,33 +249,138 @@
    "metadata": {},
    "source": [
     "### Replace\n",
-    "- str.replace(character to be replaced, replacement, count)\n",
-    "- if count not specified, all instances replaced\n",
+    "We don't want the `>` sign as part of the sequence name. How do we get rid of it? <br>\n",
     "\n",
-    "Let us find the reverse complement of a DNA sequence"
+    "- `replace()` is like search & replace in text editing programs\n",
+    "- str.replace(character to be replaced, replacement, count)\n",
+    "- if count not specified, all instances replaced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUGCCAUGUUGTC\n",
-      "ATGCCATGTTGTC\n",
-      "CTGTTGTACCGTA\n"
+      "MARTKQTARKSTGGKAPRKQLATKAARKSAPATGGVKKPHRYRPGTVALREIRRYQKSTELLIRKLPFQRLVREIAQDFKTDLRFQSSAVMALQEACEAYLVGLFEDTNLCAIHAKRVTIMPKDIQLARRIRGERA\n"
      ]
     }
    ],
    "source": [
-    "seq = \"AUGCCAUGUUGTC\"\n",
+    "seq_name = i.replace(\">\",'')\n",
+    "print(seq_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find\n",
+    "\n",
+    "- `find()` method finds the first occurence of the specified value.\n",
+    "- `str.find ( prefix [ , start [ , end ] ] )`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq.find('A',40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An everyday example of string manipulation\n",
+    "\n",
+    "How to find the reverse complement of a *DNA* sequence?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq = \"AUGCCAUGUUGTC\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If, ahem, someone enters an *RNA* sequence, let us clean it up first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if \"U\" in seq: #if it is RNA, let us change it to DNA before it gets degraded\n",
-    "    better_seq = seq.replace('U','T')\n",
+    "    better_seq = seq.replace('U','T')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us find the complement. We will take advantage of the fact that a string can also be treated as a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATGCCATGTTGTC\n",
+      "TACGGTACAACAG\n"
+     ]
+    }
+   ],
+   "source": [
+    "complement_seq=[]\n",
+    "for i in range(0,len(better_seq)):\n",
+    "    if(better_seq[i] == 'A'):\n",
+    "        complement_seq.append('T')\n",
+    "    elif(better_seq[i] == 'T'):\n",
+    "        complement_seq.append('A')\n",
+    "    elif(better_seq[i] == 'G'):\n",
+    "        complement_seq.append('C')\n",
+    "    elif(better_seq[i] == 'C'):\n",
+    "        complement_seq.append('G')\n",
+    "print(better_seq)\n",
+    "print(''.join(complement_seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Now reverse complement:\n",
     "rev_better_seq = better_seq[::-1]\n",
     "print(seq)\n",
@@ -185,9 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -215,9 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -256,9 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -315,9 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# How to get the sequences from the file into your code?\n",
@@ -342,9 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -365,9 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -391,9 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -415,9 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -443,9 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -489,9 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -547,9 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Let us write sequence details in a file called \"seq_details.txt\"\n",
@@ -587,9 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#let us assume bin size of 5 percent\n",
@@ -621,9 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -692,9 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "read = {} #this will be the dictionary for our analysis\n",
@@ -739,9 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -781,9 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "read_nuc = {} #this will be the dictionary for nucleosomes\n",
@@ -822,9 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -927,9 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "histone_x = {} #this will be the dictionary for x coordinate of protein (chain A)\n",
@@ -988,9 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1056,9 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1185,9 +1361,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1199,7 +1375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
