changes to reflect data file locations

--- a/FinalProjects/Final_Projects.ipynb
+++ b/FinalProjects/Final_Projects.ipynb
@@ -79,6 +79,8 @@
     "\n",
     "[Control](https://github.com/srinivasramachandran/Anschutz_python/blob/master/DownstreamIntron.Control.fasta)\n",
     "\n",
+    "or you can find them in the FinalProjects folder as `DownstreamIntron.Control.fasta` and `DownstreamIntron.Enhanced.fasta`.\n",
+    "\n",
     "> For the splicing afficionados out there, these files are actually of the last 50 nt of each exon and the first 150 nt of the downstream intron.\n",
     "\n",
     "What we would like to do is write code that compares the sequence content of the two files and identifies 5-mers that are enriched in the \"Enhanced\" file relative to the \"control\" file.  This can be done with the following approach:\n",
@@ -139,7 +141,7 @@
     "\n",
     "![7skstructure.png](7skstructure.png)\n",
     "\n",
-    "However, this is just one of many possible structures for this sequence. We might want to more accurately represent the whole ensemble of possible structures.  That is what we will do here.  During its computation, one of the things that RNAfold computes is the probability with each base is paired with every other base.  This is output as part of a text file.  That file for 7SK is [here](https://github.com/srinivasramachandran/Anschutz_python/blob/master/7skbpprob.txt).\n",
+    "However, this is just one of many possible structures for this sequence. We might want to more accurately represent the whole ensemble of possible structures.  That is what we will do here.  During its computation, one of the things that RNAfold computes is the probability with each base is paired with every other base.  This is output as part of a text file.  That file for 7SK is [here](https://github.com/srinivasramachandran/Anschutz_python/blob/master/7skbpprob.txt) or is present in the FinalProjects folder as `7skbpprob.txt`.\n",
     "\n",
     "Download this file. Parse it to get the basepairing probabilities for every possible nucleotide-nucleotide pair.  In this file, the base pair probability data begins with the line \"%start of base pair probability data\".  Every line after that contains four fields and is of the following form:\n",
     "\n",
