Created new dirs for assignments. Separated assignments and modules.

--- a/Module4/Module_4_File_handling_Strings_etc.ipynb
+++ b/Module4/Module_4_File_handling_Strings_etc.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "ver. 02022020\n",
-    "# Lesson 3.5 - Strings and things\n",
+    "# Module 4 - Strings and things\n",
     "\n",
     "We have reached a stage where you have started doing things with python that would take too long to do by hand or by using excel. Today we will learn the final few functions to enable you to write code that can process large datasets. At the end of this module, you will be able to read a data file and plot the results, all within jupyter.\n",
     "\n",
@@ -994,81 +994,6 @@
     "\n",
     "fig.savefig(\"test.png\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Assignment\n",
-    "\n",
-    "A wig format is used for genome coverage of a dataset. The declaration line starts with the word variableStep and is followed by a specification for a chromosome. Ignore the optional span parameter for now. You have to write the code to read the \"80mM_Ctl_sub.wig\" file and then print out the coverage as follows:\n",
-    "\n",
-    "Chromosome Position Value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the fastq file that we worked on, calculate the GC content at each position of the read. Here is a demo:\n",
-    "\n",
-    "`sequence 1: ATGCATGC\n",
-    "sequence 2: GAGAGCTA`\n",
-    "\n",
-    "First position is 50% GC, second position is 0% GC and so on."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Read a uniprot text file \"HistoneH3_Uniprot.txt\". Write code to extract just the subcellular localization and the amino acid sequence from the uniprot file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the fasta file we worked with, calculate the net charge of the protein. The negatively charged residues are 'D' and  'E'. The output should look like (These are made up numbers):\n",
-    "\n",
-    "Sequence_name:HuR Net_charge:4 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write code here"
-   ]
   }
  ],
  "metadata": {
@@ -1088,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
