--- a/Module6/Module_6_Pandas_SciPy_NumPy.ipynb
+++ b/Module6/Module_6_Pandas_SciPy_NumPy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 5\n",
+    "# Module 6\n",
     "\n",
     "## Topics:\n",
     "\n",
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "alist = [1,2,3,4,5,6,7,8,9]\n",
@@ -56,9 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#reshape returns an ndarray of specified \"shape\"\n",
@@ -73,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#The itemtypes are really important for ndarray - item types cannot mix unlike dictionary or list.\n",
@@ -88,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#to create a range, the function used is arange:\n",
@@ -101,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import pi\n",
@@ -122,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
@@ -145,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Operations!\n",
@@ -167,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Operations!\n",
@@ -203,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = np.array(np.arange(1,5))\n",
@@ -218,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = np.array(np.arange(1,11)).reshape(2,5)\n",
@@ -234,9 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#To calculate inverse of a matrix\n",
@@ -249,9 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Did the inverse work?\n",
@@ -268,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a_random_array = np.random.rand(100)*5\n",
@@ -288,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#did it really work?? Let us make a histogram to check\n",
@@ -331,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "instructor = {'name' : 'Srinivas', 'floor' : 9, 'fav_things' : ['uracil', '2primehydroxyls', 'polyAtails']}\n",
@@ -351,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_k562 = pd.read_csv(\"k562.csv\",header=None,sep=',')\n",
@@ -439,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -474,9 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "subsetdf = df.iloc[2:3, :]\n",
@@ -499,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Select the expression values in condition1\n",
@@ -513,9 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Asking for the column name as a string rather than within\n",
@@ -531,9 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Select only the 3rd row\n",
@@ -544,9 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Select the second through fifth columns\n",
@@ -558,93 +514,14 @@
     "subsetdf = df.loc[:, 'cond1exp':'pvalue']\n",
     "print(subsetdf.head())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Assignments\n",
-    "\n",
-    "    1. Random number generators are useful in creating dummy data to test robustness of your analysis. Generate values for corresponding to a cosine function in the interval [0,4*pi] and then add noise at 5% and 10% of the value of the cosine function. The output should be two ndarrays.\n",
-    "    \n",
-    "    Put another way, for each value in your interval, pick a random value that is no more than 5% or 10% away from the real value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#Solution code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    2. Linear equations can be solved using matrices. Write code to solve for 3 unknowns in the following equations using ndarrays.\n",
-    "`\n",
-    " w  + 2x + 4y -  z =  7\n",
-    "2w  - 2x -  y +  z =  5\n",
-    " w  +  x - 3y + 2z = 14\n",
-    "3w  + 4x - 5y + 3z = 26\n",
-    "`<br><br>\n",
-    "The solution is w=1, x=2, y=3, z=10.<br>\n",
-    "Here is a link where the math is explained: https://www.mathsisfun.com/algebra/systems-linear-equations-matrices.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Solution code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "   `3. The value of pi can be calculated by comparing the area of circle inscribed in a square to the area of the square. We can do this numerically by generating random numbers. Consider the following diagram:`<br>\n",
-    "    <img src=\"IMG_20190208_071332424.jpg\">\n",
-    "<br>The area of the circle divided by the area of the square (m) = pi.(r\\*\\*2)/4.r\\*\\*2<br>\n",
-    "                                                              m  = pi/4<br>\n",
-    "                                                            4\\*m = pi<br>\n",
-    "We can choose random points that fall within the square to approximate the area of the square: random values of x between 0 and 2, and random values of y between 0 and 2.<br>\n",
-    "We can then ask if that random point falls within the circle to approximate area of circle: (x-1)\\*\\*2 + (y-1)\\*\\*2 <= 1<br>\n",
-    "\n",
-    "So here is the psuedocode:\n",
-    "1. Find 1000 random values for x and y between 0 and 2\n",
-    "2. Count if that (x,y) lies within the circle (let us call this \"area_of_c\")\n",
-    "3. Find pi: 4\\*area_of_c/1000\n",
-    "\n",
-    "Repeat the same for 10,000 random numbers and 100,000 random numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#code here"
-   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -656,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
